# pi-desktop

./: .gitignore  README.md  build-debug.bat  build-release.bat  package-lock.json  package.json  release.bat  tsconfig.base.json
apps/pi-host/: package.json
apps/pi-host/scripts/: build-exe.mjs
apps/pi-host/src/: adapter-registry.ts  attachments.ts  chat-log.ts  mcp-service.ts  mode-engine.ts  permission-policy.ts  server.ts  settings.ts
apps/pi-host/src/__tests__/: attachments.test.ts  pi-adapter.conformance.test.ts
apps/pi-host/src/adapters/pi/: cli-bridge.ts  index.ts  skills.ts
apps/pi-host/src/tools/: ask-user.ts  cli-agents.ts  file-tools.ts  shell-tool.ts  subagent.ts  todo.ts  web-search.ts
apps/shell/src-tauri/: Cargo.toml  tauri.conf.json
apps/shell/src-tauri/capabilities/: default.json
apps/shell/src-tauri/src/: main.rs
apps/ui/: index.html  package.json  tsconfig.json  vite.config.ts
apps/ui/src/: App.tsx  chat-model.ts  client.ts  main.tsx  models.ts  notifications.tsx  prefs.ts  provider-presets.ts  styles.css  theme.ts
apps/ui/src/components/: Dropdown.tsx  SearchBar.tsx  Toggle.tsx  Tooltip.tsx
apps/ui/src/features/chat/: AddModel.tsx  Chat.tsx  DiffView.tsx  Markdown.tsx  ModelPicker.tsx  ThinkingPicker.tsx  ToolCard.tsx  ToolToggles.tsx  ToolsDialog.tsx
apps/ui/src/features/mcp/: McpServers.tsx
apps/ui/src/features/memory/: Memory.tsx
apps/ui/src/features/panel/: SidePanel.tsx
apps/ui/src/features/permissions/: PermissionDialog.tsx  PolicyControl.tsx
apps/ui/src/features/plugins/: Plugins.tsx
(+7 files in other folders)
